tests/baselines/reference/parserPostfixPostfixExpression1.errors.txt
parserPostfixPostfixExpression1.ts(1,1): error TS2304: Cannot find name 'a'.
parserPostfixPostfixExpression1.ts(1,5): error TS1005: ';' expected.
parserPostfixPostfixExpression1.ts(1,7): error TS1109: Expression expected.


==== parserPostfixPostfixExpression1.ts (3 errors) ====
    a++ ++;
    ~
!!! error TS2304: Cannot find name 'a'.
        ~~
!!! error TS1005: ';' expected.
          ~
!!! error TS1109: Expression expected.